# Soundness

./: .gitignore  Makefile  README.md
program/: Cargo.toml
program/src/: lib.rs
script/: Cargo.toml
script/src/: main.rs  submit.rs  verify.rs
