[package]
name = "soundness-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"

[[bin]]
name = "submit"
path = "src/submit.rs"

[dependencies]
sp1-sdk = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
hex = "0.4"
base64 = "0.22"

[profile.release]
opt-level = 3
